--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
     max-width: 900px;
     padding: 20px 30px;
     border-radius: 10px;
-    background-color: rgba(255, 255, 255);
+    background-color: rgba(255, 255, 255, 0.144);
     box-shadow: 0 10px 10px 10px rgba(0, 0, 0, 0.2);
 }
 
@@ -46,11 +46,12 @@ body {
     font-style: italic;
 }
 
-.button-container {
-    margin-top: 15px;
+.buttons-container {
     display: flex;
     justify-content: space-between;
 }
+
+
 
 button {
     cursor: pointer;
